--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<button type="button" onclick=Writer.rb>Enter Your Own Post</button>
+<button type="button" onclick="Writer.rb">Enter Your Own Post</button>
 
 ---
 layout: default
