--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<button type="button" onclick="Writer.js">Enter Your Own Post</button>
+<button type="button" onclick=Writer.js>Enter Your Own Post</button>
 
 <div class="posts">
   {% for post in site.posts %}
