--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 layout: default
 ---
 
-<button type="button" onclick="Writer.js">Enter Your Own Post</button>
-
-<script src="Writer.js" type="text/javascript"></script>
+<button type="button" onclick="Writer.rb">Enter Your Own Post</button>
 
 <div class="posts">
   {% for post in site.posts %}
